# endless-terminals

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  generate_solutions.py  generate_tasks.py
environments/endless_behavior_trace/: README.md  pyproject.toml
environments/endless_behavior_trace/endless_behavior_trace/: __init__.py  environment.py
environments/meta_control/: README.md  pyproject.toml
environments/meta_control/meta_control/: __init__.py  environment.py  manifest.json
environments/meta_control/meta_control/tasks/task_000000_005b2336/: instruction.md  task.toml
environments/meta_control/meta_control/tasks/task_000000_014b6c9e/: instruction.md  task.toml
environments/meta_control/meta_control/tasks/task_000000_051e87a8/: instruction.md  task.toml
environments/meta_control/meta_control/tasks/task_000000_0b878d30/: instruction.md
environments/meta_control/meta_control/tasks/task_000000_0b9a50d1/: instruction.md  task.toml
environments/meta_control/meta_control/tasks/task_000000_15d76abd/: instruction.md  task.toml
environments/meta_control/meta_control/tasks/task_000000_15f45ffc/: task.toml
environments/meta_control/meta_control/tasks/task_000000_188f711d/: instruction.md  task.toml
environments/meta_control/meta_control/tasks/task_000000_1a36dbe3/: instruction.md  task.toml
environments/meta_control/meta_control/tasks/task_000000_1a5db8a0/: instruction.md  task.toml
environments/meta_control/meta_control/tasks/task_000000_29c27adb/: instruction.md  task.toml
environments/meta_control/tests/: test_laguna_xml_harness.py
(+564 files in other folders)
