[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endless-behavior-trace"
version = "0.1.0"
description = "Behavior-conditioned Endless Terminals Harbor taskset for Prime Verifiers"
requires-python = ">=3.10,<3.14"
dependencies = [
  "verifiers @ git+https://github.com/PrimeIntellect-ai/verifiers.git",
  "harnesses @ git+https://github.com/PrimeIntellect-ai/verifiers.git#subdirectory=packages/harnesses",
  "tasksets[openenv,openreward,ta] @ git+https://github.com/PrimeIntellect-ai/verifiers.git#subdirectory=packages/tasksets",
]

[tool.hatch.build.targets.wheel]
packages = ["endless_behavior_trace"]
artifacts = ["endless_behavior_trace/tasks/**"]

[tool.hatch.metadata]
allow-direct-references = true
