[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meta-control"
version = "0.1.0"
description = "Behavior-conditioned Endless Terminals Harbor taskset for Prime Verifiers"
requires-python = ">=3.10,<3.14"
dependencies = [
  "verifiers @ git+https://github.com/PrimeIntellect-ai/verifiers.git",
  "tasksets[openenv,openreward,ta] @ git+https://github.com/PrimeIntellect-ai/verifiers.git#subdirectory=packages/tasksets",
]

[tool.hatch.build.targets.wheel]
packages = ["meta_control"]
artifacts = ["meta_control/tasks/**"]

[tool.hatch.metadata]
allow-direct-references = true
